# discord_status_bot

./: README.md  requirements.txt  setup.cfg
tec_state/: tecStateBot.py
tec_state/src/: gameState.py  message.py  playerState.py  serverState.py
