[metadata]
name = TecState
author = Samuel Assmann
author-email = info@tecbeat.de
long_description = file: README.md
url = https://github.com/tecbeat/discord_status_bot
requires-python = >= 3.9

[discord]
token = MTA2NTI0OTE3NzczMjM5MDkyMw.GG1jld.qIdRGb3TYHDV-eY1Xv4s6-AAl7M7z-bwQmgtYE
guild = 898597388258783322
channel = 976878076799623228